--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^3.4.4",
     "reactstrap": "^9.0.0",
+    "tailwindcss": "^2.2.19",
     "web-vitals": "^1.1.2",
     "youtube-api-search": "0.0.5"
   },
@@ -38,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "node-sass": "^4.14.1"
   }
 }
